XMLtoCSV/objects/unpackaged/objects/EM_Budget_vod__c.object
<CustomObject>
    <description>Used to store a budget hierarchy.</description>
    <fields>
        <fullName>Actual_Expenses_vod__c</fullName>
        <description>Amount of expenses already distributed from this budget.</description>
        <label>Actual Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Remaining_vod__c</fullName>
        <description>Total budget minus actual expenses.</description>
        <formula>Total_Budget_vod__c - Actual_Expenses_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Identifier_vod__c</fullName>
        <description>Used in the UI to help end users identify the correct budget. This field should be populated by an admin, and be read-only to end users.</description>
        <label>Budget Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Budget_Allocation_vod__c</fullName>
        <description>The funds that have been allocated to child budgets. This number should not exceed the Total Budget.</description>
        <label>Child Budget Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed_Expenses_vod__c</fullName>
        <description>Amount of committed funds that will be used for events, not including non-committed estimates or paid expenses</description>
        <label>Committed Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed_Remaining_vod__c</fullName>
        <description>Total budget minus committed expenses.</description>
        <formula>Total_Budget_vod__c - Committed_Expenses_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End Date of a budget.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Expenses_vod__c</fullName>
        <description>Amount of estimated funds that will be used for events, not including committed or paid expenses.</description>
        <label>Estimated Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Remaining_vod__c</fullName>
        <description>Total budget minus estimated expenses.</description>
        <formula>Total_Budget_vod__c - Estimated_Expenses_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Budget_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to a parent budget.</description>
        <label>Parent Budget</label>
        <referenceTo>EM_Budget_vod__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Parent_Budget_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product associated to this budget.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start Date of a budget.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of a budget. It must be marked as Available for Use to be selected on an event.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available_For_Use_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The territory that the budget is allocated to.</description>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Budget_vod__c</fullName>
        <description>Total value of the budget.</description>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>Budget_vod</fullName>
        <active>true</active>
        <description>Budget</description>
        <label>Budget_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>